fixed white space wrap

--- a/src/apps/content-editor/src/app/components/Nav/ContentNav.less
+++ b/src/apps/content-editor/src/app/components/Nav/ContentNav.less
@@ -23,6 +23,7 @@
 
 .NavWrap {
   height: calc(
+    // calc(100vh - 54px - 47px - 47px) ;
     calc(100vh - 54px - 47px - 90px) ;
   ); // 100 - GlobalTopbar - Collapse Btn - (Action + Search)
   margin: 0;
@@ -30,7 +31,7 @@
   overflow-x: hidden;
   background: transparent;
   padding: 0;
-  width: 20rem;
+  white-space: nowrap;
 
   .NavTitle {
     padding: 8px 16px;
